# rudg

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: cargo_publish.yml  cargo_test.yml  github_release.yml  rust.yml
crates/ast_parser_rust/: Cargo.toml
crates/ast_parser_rust/src/: ast_parser.rs  graph_exporter.rs  lib.rs  main.rs  parser.rs  uml_entity.rs  uml_to_dot.rs
crates/ast_parser_rust/src/graph_exporter/: to_dot.rs
crates/ast_parser_rust/tests/: test_aggregation.rs  test_association.rs  test_composition.rs  test_dependency.rs  test_main.rs  test_realization.rs
crates/dot/: Cargo.toml
crates/dot/src/: arrow.rs  edge.rs  graph.rs  id.rs  label_text.rs  labeller.rs  lib.rs  node.rs  render.rs  style.rs  utils.rs
crates/dot_utils/: Cargo.toml
crates/dot_utils/src/: lib.rs
crates/rudg/: Cargo.toml
crates/rudg/src/: lib.rs  uml_entity.rs
crates/rugg/: Cargo.toml
crates/rugg/src/: lib.rs  main.rs  parser.rs
crates/rugg/tests/: test_main.rs
src/: file_reader.rs  lib.rs  main.rs  parser.rs  uml_entity.rs
src/graph_exporter/: to_dot.rs
src/graph_exporter/to_dot/: uml_class.rs  uml_fn.rs  uml_graph.rs  uml_relation.rs
src/parser/: ast_parser.rs  to_uml_entities.rs
src/parser/to_uml_entities/: ast_fn.rs  ast_impl.rs  ast_struct.rs  ast_trait.rs  ast_use.rs  utils.rs
src/uml_entity/: base.rs  uml_class.rs  uml_graph.rs  uml_outer_entity.rs  uml_relation.rs
tests/: integration_tests.rs
tests/multiple_files_crate/: Cargo.toml
tests/multiple_files_crate/src/: hello.rs  main.rs
tests/simple_crate/: Cargo.toml
(+16 files in other folders)
