[package]
name = "rudg"
version = "0.2.0-dev"
edition = "2021"
description = "Rust UML Diagram Generator. A library for generating UML diagram from Rust source code."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/SelamaAshalanore/rudg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_ap_syntax = "0.0.104"
dot_graph = "0.2.1"
clap = { version = "3.1.18", features = ["derive", "cargo"] }